--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>old-mountain-acid-test</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link type="image/png" href="/favicon.png" rel="icon" />
+		<title>Old Mountain Acid Test | Grand Rapids, MI</title>
+		<meta name="description" content="Grand Rapids, MI" />
+		<link href="https://oldmountainacidtest.com/" rel="canonical" />
+		<link href="https://fonts.googleapis.com" rel="preconnect" />
+		<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Angkor&family=Montserrat:wght@100..900&display=swap"
+			rel="stylesheet"
+		/>
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Old Mountain Acid Test" />
+		<meta property="og:description" content="Grand Rapids, MI" />
+		<meta property="og:url" content="https://oldmountainacidtest.com/" />
+		<meta property="og:site_name" content="Old Mountain Acid Test" />
+		<meta property="og:image" content="/Pyramid-Scheme-Audience.jpg" />
+		<meta property="og:image:width" content="1" />
+		<meta property="og:image:height" content="1" />
+		<meta property="og:image:type" content="image/jpeg" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Old Mountain Acid Test" />
+		<meta name="twitter:description" content="Grand Rapids, MI" />
+		<meta name="twitter:image" content="/Pyramid-Scheme-Audience.jpg" />
+		<meta name="twitter:image:width" content="1200" />
+		<meta name="twitter:image:height" content="630" />
+		<meta name="twitter:image:type" content="image/jpeg" />
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.tsx"></script>
+	</body>
 </html>
